--- a/index.html
+++ b/index.html
@@ -27,9 +27,30 @@
     
     <!-- Theme Color -->
     <meta name="theme-color" content="#00ff88" />
+      <!-- Meta Pixel Code -->
+    <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1572941107285792');
+    fbq('track', 'PageView');
+    </script>
+    <!-- End Meta Pixel Code -->
+
   </head>
 
   <body>
+      <!-- Meta Pixel NoScript -->
+    <noscript>
+      <img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1572941107285792&ev=PageView&noscript=1"/>
+    </noscript>
+    <!-- End NoScript -->
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
